# mandelbrot-set

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  linux.yml  macos.yml  windows.yml
shader/: mandel.frag.glsl
src/: colour.cpp  colour.hpp  cursor.cpp  cursor.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  main.cpp  shader.cpp  shader.hpp
